# Novel-to-Scripts

./: .gitignore  AGENTS.md  README.md  YAML-Schema设计文档.md  app.py  character_card_layout_fix_report.md  frontend_data_refactor_report.md  run.bat  前端持久化编辑修改完成报告.md  前端本地保存功能修改报告.md
backend/: .env.example  README.md  _check_e2e.py  _verify_fix.py  pyproject.toml  run.txt
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py
backend/app/api/: router.py  routes_artifacts.py  routes_chapters.py  routes_frontend_data.py  routes_generation.py  routes_jobs.py  routes_projects.py  routes_schema.py  routes_screenplay_render.py  routes_yaml.py
backend/app/core/: ids.py  settings.py
backend/app/db/: __init__.py  session.py  tables.py
backend/app/domain/: __init__.py  adaptation.py  artifacts.py  audit.py  common.py  description.md  jobs.py  llm_runs.py  project.py  screenplay.py  source.py  story_bible.py
backend/app/exporters/: __init__.py  schema_exporter.py  screenplay_render_exporter.py  yaml_exporter.py
backend/app/repositories/: __init__.py  artifact_repository.py  chapter_repository.py  file_store.py  job_repository.py  llm_run_repository.py  project_repository.py
backend/app/services/: artifact_service.py  job_service.py  (+10 more)
backend/tests/: debug_deepseek_output.py  debug_smoke.py  test_api_smoke_flow.py  test_deepseek_smoke.py  test_frontend_evidence_helpers.py  test_generation_orchestrator_normalization.py  test_screenplay_normalizer.py  test_storyontology_evidence_v15.py
backend/xengineer_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+250 files in other folders)
